--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -250,7 +250,8 @@
                                     + item.rfc + "</td><td>"
                                     + item.nombreProveedor + "</td><td>"
                                     + item.moneda + "</td><td>"
-                                    + item.total + "</td><td><a class='btn btn - lg' href='/Rembolso/Details?UUID=" + item.uuid
+                                    + item.total + "</td><td>"
+                                    + item.cantidadComprobada + "</td><td><a class='btn btn - lg' href = '/Rembolso/Details?UUID=" + item.uuid
                                     + "'><i class='fas fa-info-circle'></i></a></td><td><a class='btn btn - lg' href='/Rembolso/Download?UUID=" + item.uuid
                                     + "'><i class='fas fa-download'></i></a></td><td><a class='btn btn-lg' href='/Rembolso/EnviarReembolso?UUID=" + item.uuid
                                     + "'><i class='fas fa-paper-plane'></i></a></td><td><a class='btn btn-lg' href='/Rembolso/Delete?UUID=" + item.uuid
