--- a/TravelExpenses/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,12 +37,12 @@
                             <hr />
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="form-group">
-                                <label asp-for="Input.UserName">Nombre de Usuario</label>
+                                <label asp-for="Input.UserName">Correo</label>
                                 <input asp-for="Input.UserName" class="form-control" />
                                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Input.Email">Correo</label>
+                                <label asp-for="Input.Email">Confirme Correo</label>
                                 <input asp-for="Input.Email" class="form-control" />
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
                             </div>
