Menu correcion permisos

--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -87,7 +87,7 @@
                     </div>
                 </li>
             }
-            if (User.IsInRole("Aprobador") || User.IsInRole("Procesador") || User.IsInRole("Admin"))
+            if (User.IsInRole("Aprobador")  || User.IsInRole("Admin"))
             {
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="collapse" href="#ui-basic2" aria-expanded="false" aria-controls="ui-basic2">
