--- a/TravelExpenses/Views/Solicitudes/Create.cshtml
+++ b/TravelExpenses/Views/Solicitudes/Create.cshtml
@@ -16,7 +16,7 @@
 <div class="text-left">
     <div class="card">
         <div class="card-header">
-            <a href="~/" class="btn" id="Button">Cerrar</a>
+            <a href="~/Home/ListarSolicitudes" class="btn" id="Button">Cerrar</a>
             <input type="Button" value="Guardar" class="btn" id="Button" onclick="RegistrarSolicitud()" />
         </div>
         <div class="card-body ">
@@ -33,7 +33,7 @@
 
                     <div class="col-4">
                         Importe Solicitado
-                        <input asp-for="@Model.Solicitud.ImporteSolicitado" required class="form-control" id="Importe" readonly/>
+                        <input style="width:150px;" asp-for="@Model.Solicitud.ImporteSolicitado" required class="form-control" id="Importe" readonly/>
                         <span asp-validation-for="@Model.Solicitud.ImporteSolicitado" class="text-danger"></span>
                     </div>
 
@@ -139,6 +139,7 @@
 
                             <div class="container">
                                 <div class="row">
+                                     
                                     <div class="table-responsive">
                                         <table class="table table-hover text-center" id="tabla">
                                             <thead>
@@ -300,8 +301,24 @@
     </div>*@
 
 </div>
-
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <script type="text/javascript">
+
+    $("#Importe").on({
+        "focus": function (event) {
+            $(event.target).select();
+        },
+        "keyup": function (event) {
+            $(event.target).val(function (index, value) {
+                return value.replace(/\D/g, "")
+                    .replace(/([0-9])([0-9]{2})$/, '$1.$2')
+                    .replace(/\B(?=(\d{3})+(?!\d)\.?)/g, ",");
+            });
+        }
+    });
+
+
+
     var arr = [];
     var arrG = [];
     var arrS = [];
@@ -342,7 +359,7 @@
                 //    "</td><td>" + arrG[item]["ImporteSolicitado"] + "</td><td>" + arrG[item]["Descripcion"] + "</td><td>" + arrG[item]['TipoCambios'] +
                 //    "</td><td>" + "<a class='btn btn-lg' id='accion' onclick='Eliminar(" + item + ");'><i class='fas fa-edit'></i></a>" + "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-eraser'></i></a>" + "</td></tr>";
 
-                row += "<tr><td>" + arrG[item]["Nombre"] + "</td><td>" + 111 +
+                row += "<tr><td>" + arrG[item]["Nombre"] + "</td><td>" + 5000 +
                     "</td><td>" + arrG[item]["ImporteSolicitado"] + "</td><td>" + arrG[item]["Descripcion"] + "</td><td>" + arrG[item]['TipoCambios'] + "</td></tr>";
             });
 
@@ -429,6 +446,7 @@
                 row += "<tr><td>" + arrC[item]["Comentario"] + "</td></tr>";
             });
         }
+        Comentarios_ = $("#Comentarios_").val("");
         $("#tblComentarios").html(row);
     }
 
@@ -471,7 +489,7 @@
                 cache: false,
                 success: function (response) {
                     alert("La solicitud fue registrada.\nEstatus: Incompleta \nFolio: " + response + " \n\n*Registrar al menos un destino y gasto.");
-                    window.location = "../";
+                    window.location = "../Home/ListarSolicitudes";
                      
                 },
                 error: function (error) {
@@ -488,7 +506,7 @@
                 cache: false,
                 success: function (response) {
                     alert("Solicitud registrada\nFolio: "+response);
-                    window.location = "../";
+                    window.location = "../Home/ListarSolicitudes";
                 },
                 error: function (error) {
                     alert(error);
