Correcciones en reembolso

--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -251,10 +251,9 @@
                                     + item.nombreProveedor + "</td><td>"
                                     + item.moneda + "</td><td>"
                                     + item.total + "</td><td>"
-                                    + item.cantidadComprobada + "</td><td><a class='btn btn - lg' href = '/Rembolso/Details?UUID=" + item.uuid
+                                    + item.importeComprobado + "</td><td><a class='btn btn - lg' href = '/Rembolso/Details?UUID=" + item.uuid
                                     + "'><i class='fas fa-info-circle'></i></a></td><td><a class='btn btn - lg' href='/Rembolso/Download?UUID=" + item.uuid
-                                    + "'><i class='fas fa-download'></i></a></td><td><a class='btn btn-lg' href='/Rembolso/EnviarReembolso?UUID=" + item.uuid
-                                    + "'><i class='fas fa-paper-plane'></i></a></td><td><a class='btn btn-lg' href='/Rembolso/Delete?UUID=" + item.uuid
+                                    + "'><i class='fas fa-download'></i></a></td><td><a class='btn btn-lg' href='/Rembolso/Delete?UUID=" + item.uuid
                                     + "'><i class='fas fa-eraser'></i></a></td></tr>";
                             });
                             $("#tblComprobantes").html(row);
