Correcciones en reembolso

--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -22,7 +22,7 @@
                                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                                             </div>
                                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                                <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Lista">
+                                                <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Edit" asp-Folio="@Model.Comprobante.FolioSolicitud">
                                                     Ir a Listado  <i class="fas fa-long-arrow-alt-left"></i>
                                                 </a>
                                             </div>
